oracle/prod/vocechat/svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vocechat-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vocechat-server
  template:
    metadata:
      labels:
        app: vocechat-server
    spec:
      containers:
      - name: vocechat-server
        image: privoce/vocechat-server:latest-arm64
        args:
        - --network.frontend_url
        - "https://vocechat.haijin666.top"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: vocechat-server
spec:
  selector:
    app: vocechat-server
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
