oracle/prod/vocechat/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vocechat-server
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: vocechat.haijin666.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vocechat-server
            port:
              number: 3000
